feat: implemented the entire B19 story
